[package]
name = "pooling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
quaint = {git = "https://github.com/prisma/quaint", features = ["all"]}
# quaint = {path = "../../quaint", features = ["all"]}
futures = "0.3.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
console-subscriber = "0.1.0"
log = "0.4"
simple_logger = "2.1"
